Fix memory leak and JTL output error (#44)
* Import websocket plugin

* Import http2 plugin

* Import HLS plugin

* Move HLS files into right packages

* Move http2 files around

* Fix misprint

* Fix Readme
Automatic formatting
Remove shade

* Added unit test

* New tests

* New unit test

* Update pom.xml removing libs that were not used

* fix resolution selection issue

* fix max resolution selection

* Add modules to parent

* use default

* switch to Java 8

* fix max bandwidth resolution

* HTTP2 Plugin:

- Fix README.md
- Remove shaded jar
- Remove libs that were not used in pom.xml
- Extend and inherit code of JMeter instead of copying it.
- Create Unit tests.

* HTTP2 Plugin:

Add unit Tests

* Import 3 plugins (#3)

* Fix Readme
Automatic formatting
Remove shade

* Added unit test

* New tests

* New unit test

* Update pom.xml removing libs that were not used

* fix resolution selection issue

* fix max resolution selection

* fix max bandwidth resolution

* HTTP2 Plugin:

- Fix README.md
- Remove shaded jar
- Remove libs that were not used in pom.xml
- Extend and inherit code of JMeter instead of copying it.
- Create Unit tests.

* HTTP2 Plugin:

Add unit Tests

* HTTP2StreamHandler Tests

* HTTP2 Plugin:
Unit tests for HTTP2 Sampler

* Unit Tests of HTTP/2 Plugin

* make class Parser serializable

* Resolve conflicts on pom.xml

* merge mqtt

* Fix HLS pom.xml

* Fix HLS conflicts

* Add files via upload

Files to include in the HLS Readme manual:
- plugin images
- .jmx example

* Update documentation of HTTP/2

* Update README.md

HLS Readme file updated.

* added before_install to .travis.yml

* Fix bugs in HLS plugin
-Remove unused code
-Remove duplicated playlist that were shown in the View Result Tree
-Fix infinite loop in Live Stream
-Update unit test according to modifications

* Fix bug in HLS plugin
-Fix problem occurred when s